fixed suggestions of the review